[package]
name = "mmap-sync"
version = "2.0.1"
edition = "2021"
authors = [
    "Alex Bocharov <bocharov.alexandr@gmail.com>",
    "Austin Hartzheim <ahartzheim@cloudflare.com>",
]
description = "A Rust package allowing sharing of data between processes in a wait-free and zero-copy fashion from mapped memory."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cloudflare/mmap-sync"
keywords = ["memory-mapping", "synchronization", "interprocess", "wait-free", "zero-copy"]
categories = ["os", "filesystem", "concurrency", "data-structures", "memory-management"]

[dependencies]
memmap2 = "0.9.4"
rkyv = "0.8.9"
thiserror = "1.0.30"
wyhash = "0.5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf-codec", "criterion"] }
proptest = "1.0.0"
rand = "0.8.5"

[[bench]]
name = "synchronizer"
harness = false

[package.metadata.docs.rs]
all-features = true
